Fixed color and z-index values

--- a/static/css/components/nav-bar.less
+++ b/static/css/components/nav-bar.less
@@ -62,9 +62,9 @@
     right: 0;
     top: 0;
     bottom: 0;
-    z-index: 10000;
+    z-index: @z-index-level-14;
     width: 44px;
-    background: linear-gradient(to right, transparent, white 10px);
+    background: linear-gradient(to right, transparent, @white 10px);
 
     img {
       max-width: unset !important;
